# latihan_fullstack_axum

./: Cargo.toml  README.md
frontend/: index.html  script.js  style.css
src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  repository.rs
